Fixed footer alignment bug

--- a/server/static/custom.css
+++ b/server/static/custom.css
@@ -6,10 +6,4 @@ body {
     background-color: transparent;
 }
 
-#homeDetails {
-    background-color: #fff;
-    min-height: 500px;
-    position: absolute;
-    top: 100vh;
-    width: 82%;
-}
+
